# zarr-vectors-py

./: .gitignore  .readthedocs.yaml  BRIDGE_APPEND_API_PLAN.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml  tests.yml
benchmarks/: 01_size_scaling.ipynb  02_data_types.ipynb  03_backends.ipynb  04_pyramid_scaling.ipynb  05_bbox_queries.ipynb  06_chunk_shape.ipynb  07_compression.ipynb  08_edit_operations.ipynb  README.md  _build.py
docs/: Zarr-Vectors-Explainer.html  conf.py  index.rst  requirements-docs.txt
docs/_static/: custom.css
docs/api/: constants.rst  index.rst  ingest.rst  lazy.rst  spatial.rst  types.rst  typing.rst  validate.rst  zarr_vectors.rst
docs/benchmarks/: index.md
docs/getting_started/: concepts.md  faq.md  installation.md  quickstart.md
docs/how_to/: choose_chunk_and_bin.md  cite.md  hpc_pipelines.md  memory_efficient_writes.md
docs/spec/: index.md  schema.md
docs/spec/chunking/: attribute_chunking.md  bin_shape.md  chunk_shape.md  chunk_vs_bin.md  rechunking.md  sharding.md
docs/spec/comparisons/: neuroglancer_precomputed.md  ome_zarr.md  trx_format.md
docs/spec/contributing/: adding_geometry_types.md  spec_change_process.md  test_compliance.md
docs/spec/foundations/: codec_pipeline.md  dimensionality.md  store_types.md  zarr_v3_primer.md
docs/spec/geometry_types/: graph.md  index.md  line.md  mesh.md  point_cloud.md  polyline.md  skeleton.md  streamline.md
docs/spec/layout/: chunk_arrays.md  directory_structure.md  fragment_index_arrays.md  level_groups.md  root_metadata.md  vg_index_arrays.md
docs/spec/multiscale/: multiscale_metadata.md  pyramid_construction.md  sparsity.md
docs/spec/object_model/: cross_chunk_links.md  fragments.md  object_attributes.md  object_manifest.md  vertex_groups.md
docs/spec/validation/: l1_structural.md  l2_metadata.md  l3_consistency.md  overview.md
docs/tutorials/data_types/: graphs_skeletons.md  meshes.md  point_clouds.md  polylines_streamlines.md
docs/tutorials/io/: cloud_stores.md  ingest_formats.md  validation_and_repair.md
docs/tutorials/multiscale/: building_pyramids.md  lazy_loading.md
docs/tutorials/neuroglancer/: layer_api.md  local_viewer.md  overview.md  precomputed_export.md  shell_console.md  zv_ngtools_install.md
examples/: 01_point_clouds.ipynb  02_lines.ipynb  03_polylines_streamlines.ipynb  04_graphs.ipynb  05_skeletons.ipynb  06_meshes.ipynb  07_multiscale_links.ipynb  _build_07_multiscale_links.py  tractogram_to_zarrvectors.ipynb
examples/.ipynb_checkpoints/: 01_point_clouds-checkpoint.ipynb
examples/benchmarks/: 01_size_scaling.ipynb  02_data_types.ipynb  03_backends.ipynb  README.md  _build.py
examples/tracts.zarrvectors/: .zattrs
examples/tracts.zarrvectors/resolution_0/: .zattrs
examples/tracts.zarrvectors/resolution_0/cross_chunk_links/: .zattrs  data
examples/tracts.zarrvectors/resolution_0/groupings/: .zattrs  offsets
examples/tracts.zarrvectors/resolution_0/object_index/: .zattrs  data  offsets
examples/tracts.zarrvectors/resolution_0/vertex_group_offsets/: 0.0.0  0.0.1  0.1.0  0.1.1  1.0.0  1.0.1  1.1.0  1.1.1
examples/tracts.zarrvectors/resolution_0/vertices/: 0.0.0  0.0.1  0.1.0  0.1.1  1.0.0  1.0.1  1.1.0  1.1.1
examples/tracts.zarrvectors/resolution_1/: .zattrs
schema/: README.md  reference.md  regen.py  zarr_vectors.linkml.yaml  zarr_vectors.schema.json
tests/: conftest.py  test_arrays.py  test_async_backend.py  test_attr_chunking.py  test_backends.py  test_batched_reads.py  test_batched_writes.py  test_chunk_helpers.py  test_codec_config.py  test_core.py  test_cross_chunk_faces.py  test_edit_attributes.py  test_edit_fragments.py  test_edit_implicit_sequential.py  test_edit_links.py  test_edit_merge_split.py  test_edit_objects.py  test_edit_perf.py  test_edit_pyramid_refresh.py  test_edit_vertices.py  test_encoding.py  test_fragments.py  test_graphs.py  test_headers.py  test_icechunk_backend.py  test_lazy_writer.py  test_lines_parametric.py  test_linkml_schema.py  test_merge.py  test_meshes.py  test_multiscale_links.py  test_object_index_blocks.py  test_object_index_layout.py  test_paths.py  test_per_level_chunk_shape.py  test_per_object_pyramid.py  test_perf_writes.py  test_points.py  test_polylines.py  test_rechunk_by_attribute.py  (+5 more)
tests/integration/: test_binning_sparsity.py  test_lazy_sharding_rechunk.py  test_pipelines.py
zarr_vectors/: __init__.py  composite.py  constants.py  exceptions.py  typing.py
zarr_vectors.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zarr_vectors/cli/: __init__.py  main.py
zarr_vectors/core/: _batch_reader.py  _batch_writer.py  arrays.py  attr_chunking.py  group.py  metadata.py  multiscale.py  paths.py  store.py
zarr_vectors/core/backends/: __init__.py  async_base.py  base.py  fsspec_backend.py  icechunk_backend.py  local.py  obstore_backend.py
zarr_vectors/encoding/: categorical.py  compression.py  draco.py  fragments.py  ragged.py
zarr_vectors/export/: csv_points.py  obj.py  ply.py  swc.py  trk.py  trx.py
zarr_vectors/headers/: __init__.py  formats.py  registry.py
zarr_vectors/ingest/: csv_points.py  graphml.py  las.py  obj.py  ply.py  stl.py  swc.py  tck.py  trk.py  trx.py
zarr_vectors/lazy/: __init__.py  arrays.py  level.py  store.py  views.py  writer.py
zarr_vectors/multiresolution/: coarsen.py  layers.py  metanodes.py  object_selection.py
zarr_vectors/multiresolution/strategies/: graphs.py  meshes.py  points.py  polylines.py
zarr_vectors/ops/: __init__.py  attributes.py  change_set.py  edit.py  fragments.py  links.py  merge.py  objects.py  refresh.py  refs.py  relocate.py  vacuum.py
zarr_vectors/rechunk/: __init__.py  engine.py  rebin.py  spec.py
zarr_vectors/sharding/: __init__.py  hilbert.py  io.py  layout.py  morton.py
zarr_vectors/spatial/: boundary.py  chunking.py
zarr_vectors/types/: graphs.py  lines.py  meshes.py  parametric.py  points.py  polylines.py
zarr_vectors/validate/: __init__.py  conformance.py  consistency.py  metadata.py  structure.py
(+10 files in other folders)
