[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zarr-vectors"
version = "0.1.0"
description = "Python utilities for the Zarr Vector Format (ZVF) — cloud-native storage for points, lines, streamlines, graphs, and meshes."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Andrew Keenlyside"},
    {name = "Forrest Collman"},
]
keywords = ["zarr", "point-cloud", "mesh", "skeleton", "streamline", "connectomics", "spatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "zarr>=3.0",
    "numpy>=1.24",
    "numcodecs>=0.12",
]

[project.optional-dependencies]
ingest = [
    "laspy>=2.4",
    "plyfile>=1.0",
    "trimesh>=4.0",
    "nibabel>=5.0",
    "trx-python>=0.3",
    "networkx>=3.0",
]
draco = [
    "DracoPy>=1.3",
]
cloud = [
    "s3fs>=2024.0",
    "gcsfs>=2024.0",
]
all = [
    "zarr-vectors[ingest,draco,cloud]",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
zarr-vectors = "zarr_vectors.cli.main:main"

[tool.setuptools.packages.find]
include = ["zarr_vectors*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
