[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zarr-vectors"
version = "0.1.0"
description = "Python utilities for the Zarr Vector Format (ZVF) — cloud-native storage for points, lines, streamlines, graphs, and meshes."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Andrew Keenlyside"},
    {name = "Forrest Collman"},
]
keywords = ["zarr", "point-cloud", "mesh", "skeleton", "streamline", "connectomics", "spatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "numcodecs>=0.12",
    "zarr>=3.0; python_version >= '3.11'",
    "zarr>=2.18,<3; python_version < '3.11'",
]

[project.optional-dependencies]
draco = [
    "DracoPy>=1.3",
]
obstore = [
    "obstore>=0.3",
]
fsspec = [
    "fsspec>=2024.0",
    "s3fs>=2024.0",
    "gcsfs>=2024.0",
    "adlfs>=2024.0",
]
# Icechunk is a transactional Zarr Store (commit-based versioning on
# top of a cloud or local object store).  Selected via
# ``backend="icechunk"`` on create_store / open_store; never auto-
# detected from URL scheme (icechunk has no native scheme).
icechunk = [
    "icechunk>=0.2",
]
# Alias: keep the existing [cloud] extras working; resolves to obstore
# (the preferred cloud backend).
cloud = [
    "zarr-vectors[obstore]",
]
all = [
    "zarr-vectors[draco,obstore,fsspec,icechunk]",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
    # Build-time-only schema toolchain.  End users never need these;
    # CI uses them to regenerate `schema/zarr_vectors.schema.json` and
    # `schema/reference.md` from the LinkML source.  The `jsonschema`
    # package is also used by `tests/test_linkml_schema.py` to verify
    # that the hand-written dataclasses round-trip against the schema.
    "linkml>=1.7,<2",
    "jsonschema>=4.0,<5",
]

[tool.setuptools.packages.find]
include = ["zarr_vectors*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
