[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zarr-vectors"
dynamic = ["version"]
description = "Python utilities for the Zarr Vector Format (ZVF) — cloud-native storage for points, lines, streamlines, graphs, and meshes."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Andrew Keenlyside"},
    {name = "Forrest Collman"},
]
keywords = ["zarr", "point-cloud", "mesh", "skeleton", "streamline", "connectomics", "spatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "numcodecs>=0.12",
    "zarr>=3.0; python_version >= '3.11'",
    "zarr>=2.18,<3; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/AllenInstitute/zarr-vectors-py"
Documentation = "https://zarr-vectors-py.readthedocs.io"
Repository = "https://github.com/AllenInstitute/zarr-vectors-py"
Issues = "https://github.com/AllenInstitute/zarr-vectors-py/issues"
Specification = "https://github.com/AllenInstitute/zarr_vectors"

[project.optional-dependencies]
draco = [
    "DracoPy>=1.3",
]
obstore = [
    "obstore>=0.3",
]
fsspec = [
    "fsspec>=2024.0",
    "s3fs>=2024.0",
    "gcsfs>=2024.0",
    "adlfs>=2024.0",
]
# Icechunk is a transactional Zarr Store (commit-based versioning on
# top of a cloud or local object store).  Selected via
# ``backend="icechunk"`` on create_store / open_store; never auto-
# detected from URL scheme (icechunk has no native scheme).
icechunk = [
    # icechunk 2.x dropped 3.11; pin the major to avoid the lockfile
    # silently resolving icechunk 1.x on 3.11 and icechunk 2.x on 3.12
    # (which differ in how raw store.set() PUTs against array paths are
    # accepted — see zarr_vectors/core/_batch_writer.py).
    "icechunk>=2; python_version >= '3.12'",
]
# Alias: keep the existing [cloud] extras working; resolves to obstore
# (the preferred cloud backend).
cloud = [
    "zarr-vectors[obstore]",
]
all = [
    "zarr-vectors[draco,obstore,fsspec,icechunk]",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.10",
    # Build-time-only schema toolchain.  End users never need these;
    # CI uses them to regenerate `schema/zarr_vectors.schema.json` and
    # `schema/reference.md` from the LinkML source.  The `jsonschema`
    # package is also used by `tests/test_linkml_schema.py` to verify
    # that the hand-written dataclasses round-trip against the schema.
    "linkml>=1.7,<2",
    "jsonschema>=4.0,<5",
]

[tool.setuptools.packages.find]
include = ["zarr_vectors*"]

[tool.setuptools_scm]
# Derive the package version from git tags (e.g. ``v0.1.0`` → ``0.1.0``).
# At build time setuptools-scm writes the resolved version to
# ``zarr_vectors/_version.py`` so the installed package can expose it as
# ``zarr_vectors.__version__`` without re-reading installed metadata at
# import time.  The generated file is gitignored — the git tag is the
# single source of truth.
version_file = "zarr_vectors/_version.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
